display overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,9 @@
   overflow: auto;
   padding: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .container-fluid {
+    overflow: hidden;
+  }
+}
