--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 .container-fluid {
-  height: 91svh;
+  height: 91vh;
   width: 100vw;
   background: url(../../assets/draw1.webp);
 }
